projects/compiler/test/typechecker/match/error_forbidden_type_all_branches_never.abra
func foo(): Int {
  val x = match 123 {
    _ => return 0
  }

  0
}